add missing input

--- a/action.yml
+++ b/action.yml
@@ -56,6 +56,9 @@ inputs:
   shed-key:
     description: '(Secret!) tool shed api key'
     default: 'toolshed'
+  tools:
+    description: 'List of tools'
+    default: ''
 
 outputs:
   commit-range:
