--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -65,6 +65,8 @@ jobs:
         fetch-depth: 0
     - name: BUMP TOOLS
       run: |
+        git config --global user.name "Arthur Dent"
+        git config --global user.email "a.dent@galaxyproject.org"
         echo "" >> test/tools/tool1/tool1.xml
         echo "" >> test/tools/tool2/tool2.xml
         git commit -m bump test/tools/tool1/tool1.xml test/tools/tool2/tool2.xml
