--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -70,6 +70,7 @@ jobs:
         echo "" >> test/tools/tool1/tool1.xml
         echo "" >> test/tools/tool2/tool2.xml
         git commit -m bump test/tools/tool1/tool1.xml test/tools/tool2/tool2.xml
+        git log
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
       # TODO uses: ./
       uses: bernt-matthias/planemo-ci-action@topic/ci-for-wf
